--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block body_class %}
+{% endblock %}
+
 {% block main %}
     <div class="student-view">
         <div class="container">
