--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,11 +7,7 @@
 
 -->
 
-<html lang="{{ app.request.locale|lower }}"
-        {% if app.request.get('_route') == "app.course_info.view.student" %}
-            class="bg-black"
-        {% endif %}
->
+<html lang="{{ app.request.locale|lower }}">
 
 <head>
     <meta charset="utf-8">
