--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,7 +50,7 @@
 <div class="container-loader">
     <i class="fas fa-circle-notch text-primary fa-2x fa-spin"></i>
 </div>
-{% include 'default/messages.html.twig' %}
+{% include 'default' %}
 <div id="app" class="wrapper">
     {% block main %}{% endblock %}
 </div>
