--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,12 +11,12 @@
 
 @import "../../node_modules/bootstrap4-toggle/css/bootstrap4-toggle.min.css";
 
-@import "node_modules/select2";
+@import "../../node_modules/select2";
 
 @import "../../node_modules/slick-carousel/slick/slick.css";
 @import "../../node_modules/slick-carousel/slick/slick-theme.css";
 
-@import "node_modules/admin-lte";
+@import "../../node_modules/admin-lte";
 
 @import 'custom';
 
