--- a/templates/form/activities_field.html.twig
+++ b/templates/form/activities_field.html.twig
@@ -1,14 +1,14 @@
 {% macro activity_template(activity) %}
     {% set class = '' %}
     {% if activity.vars.data %}
-        {% if activity.vars.data.activity.type == constant("AppBundle\\Constant\\ActivityType::ACTIVITY") %}
-            {% if activity.vars.data.activity.mode == constant("AppBundle\\Constant\\ActivityMode::IN_CLASS") %}
+        {% if activity.vars.data.activity.type == constant("App\\Syllabus\\Constant\\ActivityType::ACTIVITY") %}
+            {% if activity.vars.data.activity.mode == constant("App\\Syllabus\\Constant\\ActivityMode::IN_CLASS") %}
                 {% set class = 'activity-in-class' %}
             {% else %}
                 {% set class = 'activity-in-autonomy' %}
             {% endif %}
         {% else %}
-            {% if activity.vars.data.activity.mode == constant("AppBundle\\Constant\\ActivityMode::EVAL_CC") %}
+            {% if activity.vars.data.activity.mode == constant("App\\Syllabus\\Constant\\ActivityMode::EVAL_CC") %}
                 {% set class = 'evaluation-cc' %}
             {% else %}
                 {% set class = 'evaluation-ct' %}
