added images - need fix dmishh + translation

--- a/templates/NelmioApiDocBundle/views/SwaggerUi/index.html.twig
+++ b/templates/NelmioApiDocBundle/views/SwaggerUi/index.html.twig
@@ -10,7 +10,7 @@
 {% endblock stylesheets %}
         {% block header %}
             <a id="logo" href="https://github.com/nelmio/NelmioApiDocBundle">
-                <img src="{{ asset('images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
+                <img src="{{ asset('build/images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
             </a>
         {% endblock header %}
 
