--- a/templates/base_homepage.html.twig
+++ b/templates/base_homepage.html.twig
@@ -5,8 +5,8 @@
     </nav>
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4 logo-switch">
-            <img src="{{ asset('images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
-            <img src="{{ asset('images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
+            <img src="{{ asset('build/images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
+            <img src="{{ asset('build/images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
         </a>
         {% block sidebar %}{% endblock %}
     </aside>
