--- a/templates/base_layout.html.twig
+++ b/templates/base_layout.html.twig
@@ -39,8 +39,8 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     {% if not app.request.query.get('iframe') %}
         <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4 logo-switch">
-            <img src="{{ asset('images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
-            <img src="{{ asset('images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
+            <img src="{{ asset('build/images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
+            <img src="{{ asset('build/images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
         </a>
     {% else %}
         <a class="brand-link elevation-4 logo-switch text-center"
