Lexik + Dmishh fixes

--- a/templates/LexikTranslationBundle/views/Translation/grid.html.twig
+++ b/templates/LexikTranslationBundle/views/Translation/grid.html.twig
@@ -55,10 +55,10 @@
     </script>
     <script src="{{ asset('bundles/lexiktranslation/js/translation.js') }}"></script>
     <script>
-        public function deleteElement()
+        function deleteElement()
         {
             Swal.fire('Any fool can use a computer')
-        };
+        }
 
     </script>
 {% endblock %}
