--- a/templates/base_layout.html.twig
+++ b/templates/base_layout.html.twig
@@ -58,6 +58,10 @@
     {% block content %}{% endblock %}
 </div>
 <footer class="main-footer">
-    {% block footer %}{% endblock %}
+    {% block footer %}
+        <a href="{{ path('credits') }}" target="_blank">
+            {{ 'credits.link' | trans }}
+        </a>
+    {% endblock %}
 </footer>
 {% endblock %}
